@@ -782,6 +782,7 @@ spacePermissionApiToDb :: PermissionSpace -> DbSpacePermission
 spacePermissionApiToDb = \case
   MkPermissionSpaceViewSpace -> MkDbSpacePermission_view_space
   MkPermissionSpaceEditDesk -> MkDbSpacePermission_edit_desk
+  MkPermissionSpaceEditRole -> MkDbSpacePermission_edit_role
   MkPermissionSpaceEditSpace -> MkDbSpacePermission_edit_space
   MkPermissionSpaceCreateReservation -> MkDbSpacePermission_create_reservation
   MkPermissionSpaceCancelReservation -> MkDbSpacePermission_cancel_reservation
@@ -790,6 +791,7 @@ spacePermissionDbToApi :: DbSpacePermission -> PermissionSpace
 spacePermissionDbToApi = \case
   MkDbSpacePermission_view_space -> MkPermissionSpaceViewSpace
   MkDbSpacePermission_edit_desk -> MkPermissionSpaceEditDesk
+  MkDbSpacePermission_edit_role -> MkPermissionSpaceEditRole
   MkDbSpacePermission_edit_space -> MkPermissionSpaceEditSpace
   MkDbSpacePermission_create_reservation -> MkPermissionSpaceCreateReservation
   MkDbSpacePermission_cancel_reservation -> MkPermissionSpaceCancelReservation
